--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-lg-4 bg-dark text-white text-center py-4">
                 <div class="header-left">
-                    <img src="/Users/kesavreddy/Downloads/IMG_9241.JPG" alt="" class="img-thumbnail rounded-circle mb-2" style="width: 6cm; height: 6cm; object-fit: cover; border-radius: 50%;">
+                    <img src="IMG_9241.JPG" alt="" class="img-thumbnail rounded-circle mb-2" style="width: 6cm; height: 6cm; object-fit: cover; border-radius: 50%;">
                     <h1 class="display-7">Kesav Reddy Paderla</h1>
                     <h4 class="lead text-white-50 mb-4">Artificial Intelligence and DataScience Student</h4>
                 </div>
